# gemini-engine-takehome-interview

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  run.sh  test.sh
Test/: CMakeLists.txt  OrderbookTest.cpp
TestFiles/: basic_result.txt  fully_fill_input.txt  fully_fill_result.txt  invalid_price_input.txt  invalid_quantity_input.txt  nothing_fill_input.txt  nothing_fill_result.txt  one_ask_multiple_bid_input.txt  one_ask_multiple_bid_result.txt  one_bid_multiple_ask_input.txt  one_bid_multiple_ask_result.txt  unknown_side_input.txt  unknown_side_result.txt
src/: InputHandler.cpp  InputHandler.hpp  Order.hpp  Orderbook.cpp  Orderbook.hpp  OrderbookInstrument.hpp  Side.hpp  Trade.hpp  main.cpp
